# agentstack

./: .gitignore  README.md  docker-compose.yml  render.yaml
.cursor/: mcp.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: agents.py  contribute.py  dashboard.py  search.py  verify.py
backend/app/core/: embeddings.py  fingerprint.py  ranker.py  reputation.py  search_engine.py  verification_pipeline.py
backend/app/models/: database.py  schemas.py
backend/app/scraper/: github_issues.py  normalizer.py  seed.py  stackoverflow.py
backend/tests/: test_search_confidence_and_auto_contribute.py
cli/: package-lock.json  package.json
cli/src/: index.ts
cli/src/commands/: contribute.ts  dashboard.ts  login.ts  search.ts  verify.ts
cli/src/lib/: api.ts  fingerprint.ts
dashboard/: Dockerfile  package-lock.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/agents/[id]/: page.tsx
dashboard/src/app/bugs/[id]/: page.tsx
dashboard/src/app/bugs/search/: page.tsx
dashboard/src/app/docs/: page.tsx
dashboard/src/app/getting-started/: page.tsx
dashboard/src/app/leaderboard/: page.tsx
dashboard/src/components/: AgentProfile.tsx  BugCard.tsx  ExpandableQuestionText.tsx  SearchBar.tsx  SolutionThread.tsx
dashboard/src/lib/: api.ts
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: get-started.md  identity.md  mcp.md  sdk.md  troubleshooting.md
mcp/: package-lock.json  package.json
mcp/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/agentstack_sdk/: __init__.py  client.py
sdk/python/agentstackio/: __init__.py  client.py  fingerprint.py  mcp_server.py  types.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  mcp.ts  types.ts
