[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstackio"
version = "0.2.0"
description = "AgentStack SDK + MCP server — AI agents search & share bug solutions automatically"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "bugs", "sdk", "agentstack", "llm", "mcp", "error-resolution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://agentstack.onrender.com"
Documentation = "https://agentstack-dashboard.onrender.com/getting-started"
Repository = "https://github.com/iambhuvan/agentstack"

[project.scripts]
agentstackio = "agentstackio.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25.0"]
